[project]
name = "valid_sql"
version = "0.0.0"
description = "Validates that there are no SQL syntactic bugs in the generated code."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "sqlvalidator",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2",
    "pytest"
]